# Mini-Creator

./: CMakeLists.txt  Dependency.cmake  README.md
model/vanellope/: Vanellope.mtl
shader/: light.fs  light.vs  simple.fs  simple.vs  texture.fs
src/: app.cpp  app.h  buffer.cpp  common.cpp  common.h  context.cpp  context.h  framebuffer.cpp  image.cpp  main.cpp  mesh.cpp  mesh.h  model.cpp  model.h  program.cpp  program.h  shader.cpp  shader.h  texture.cpp  texture.h  vertex_layout.cpp
src/commands/: command_import.cpp  command_import.h
src/components/: camera.cpp  camera.h  camera_mode.h  mesh.cpp  mesh.h  model.cpp  model.h
src/core/: model.cpp  model.h  model_manager.cpp  model_manager.h
src/graphics/shader/: mesh.fs  mesh.vs
src/model/: mesh.cpp  mesh.h  model.cpp  model.h
src/shader/: mesh.fs  mesh.vs
src/ui/: main_window.cpp  main_window.h  menu_bar.cpp  menu_bar.h  tool_bar.cpp  tool_bar.h
src/ui/menu_bar/: animation_menu.cpp  animation_menu.h  camera_menu.cpp  camera_menu.h  edit_menu.cpp  edit_menu.h  file_menu.cpp  file_menu.h
src/ui/widgets/: main_widget.cpp  main_widget.h  object_control_widget.cpp  object_control_widget.h  render_widget.cpp  render_widget.h
src/ui/widgets/main_widget/: render_widget.cpp  render_widget.h
